Bug Fix: logout button and alert z-index

--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -3,6 +3,7 @@
   top: 60px;
   width: 100%;
   padding: 10px 0 0;
+  z-index: 100;
 }
 
 .alert {
